switch back to main branch

--- a/gitops/base/values.yaml
+++ b/gitops/base/values.yaml
@@ -1,6 +1,6 @@
 gitops:
   repo: https://github.com/ismailbay/home-infra
-  revision: argocd
+  revision: main
 stacks:
   - name: gitops
     namespace: argocd
