--- a/system/cert-manager/Chart.yaml
+++ b/system/cert-manager/Chart.yaml
@@ -4,4 +4,4 @@ version: 0.0.0
 dependencies:
   - name: cert-manager
     version: 1.11.0
-    repository: https://artifacthub.io/packages/helm/cert-manager/cert-manager
+    repository: https://charts.jetstack.io
