--- a/system/ingress-nginx/Chart.yaml
+++ b/system/ingress-nginx/Chart.yaml
@@ -4,4 +4,4 @@ version: 0.0.0
 dependencies:
   - name: ingress-nginx
     version: 4.5.2
-    repository: https://artifacthub.io/packages/helm/ingress-nginx/ingress-nginx
+    repository: https://kubernetes.github.io/ingress-nginx
