--- a/system/cert-manager/values.yaml
+++ b/system/cert-manager/values.yaml
@@ -1,6 +1,6 @@
 cert-manager:
   installCRDs: true
   prometheus:
-    enabled: false
+    enabled: true
     servicemonitor:
-      enabled: false
+      enabled: true
