--- a/gitops/argocd/values.yaml
+++ b/gitops/argocd/values.yaml
@@ -4,6 +4,19 @@ argo-cd:
       enabled: true
       serviceMonitor:
         enabled: true
+    ingress:
+        enabled: true
+        ingressClassName: nginx
+        annotations:
+          cert-manager.io/cluster-issuer: letsencrypt-prod
+          hajimari.io/appName: ArgoCD
+          hajimari.io/icon: jellyfish
+        hosts:
+          - &host argocd.home.ismailbay.at
+        tls:
+          - secretName: argocd-tls-certificate
+            hosts:
+              - *host
   controller:
     metrics: *metrics
   repoServer:
