--- a/gitops/argocd/values.yaml
+++ b/gitops/argocd/values.yaml
@@ -1,5 +1,7 @@
 argo-cd:
   server:
+    extraArgs:
+      - --insecure
     metrics: &metrics
       enabled: true
       serviceMonitor:
@@ -17,6 +19,8 @@ argo-cd:
           - secretName: argocd-tls-certificate
             hosts:
               - *host
+  dex:
+    enabled: false
   controller:
     metrics: *metrics
   repoServer:
