add k8s base components (#9)
* add nginx ingress controller
* add branch option to argo application sets
* rename argocd bootstrap app
* add cert-manager
* add loki and promtail
* add prometheus stack
* add secrets for grafana
* activate prometheus and service monitors
* add hajimari dashboard
* allow insecure connections to argocd
* add some bookmarks to dashboard
* add some useful bookmarks
* add descheduler with default policies
* add kured

--- a/gitops/argocd/values.yaml
+++ b/gitops/argocd/values.yaml
@@ -1,9 +1,26 @@
 argo-cd:
   server:
+    extraArgs:
+      - --insecure
     metrics: &metrics
-      enabled: false
+      enabled: true
       serviceMonitor:
-        enabled: false
+        enabled: true
+    ingress:
+        enabled: true
+        ingressClassName: nginx
+        annotations:
+          cert-manager.io/cluster-issuer: letsencrypt-prod
+          hajimari.io/appName: ArgoCD
+          hajimari.io/icon: jellyfish
+        hosts:
+          - &host argocd.home.ismailbay.at
+        tls:
+          - secretName: argocd-tls-certificate
+            hosts:
+              - *host
+  dex:
+    enabled: false
   controller:
     metrics: *metrics
   repoServer:
